--- a/packages/editor/statics/styles/inline-toolbar.scss
+++ b/packages/editor/statics/styles/inline-toolbar.scss
@@ -17,7 +17,6 @@ $borderRadius: 6px;
 
 .inlineToolbar_buttons {
   display: flex;
-  height: 48px;
 }
 
 .inlineToolbar_overrideContent {
