--- a/packages/editor/statics/styles/text-label-button.scss
+++ b/packages/editor/statics/styles/text-label-button.scss
@@ -19,7 +19,7 @@
 
 .textLabelButton_wrapper {
   display: inline-block;
-  padding: 10px 0 6px;
+  padding: 10px 0;
   margin-right: 10px;
   &:last-child {
     margin-right: 0;
